deployment/k8s/30-oauth2-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: quintus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-04-17T07:06:59Z"
      labels:
        app: oauth2-proxy
    spec:
      containers:
      - args:
        - --http-address=0.0.0.0:4180
        - --provider=oidc
        - --provider-display-name=Dex
        - --client-id=oauth2-proxy
        - --client-secret=$(OAUTH2_PROXY_CLIENT_SECRET)
        - --redirect-url=http://whoami.local.test/oauth2/callback
        - --oidc-issuer-url=http://dex.local.test
        - --skip-oidc-discovery=true
        - --login-url=http://dex.local.test/dex/auth
        - --redeem-url=http://dex.quintus.svc.cluster.local:5556/dex/token
        - --oidc-jwks-url=http://dex.quintus.svc.cluster.local:5556/dex/keys
        - --email-domain=*
        - --cookie-secret=Zm9vYmFyYmF6cXV4eHl6MTIzNDU2Nzg5
        - --cookie-secure=false
        - --reverse-proxy=true
        - --set-xauthrequest=true
        - --pass-access-token=true
        - --upstream=static://202
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.6.0
        imagePullPolicy: IfNotPresent
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
