deployment/k8s/43-traefik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "5"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"traefik","namespace":"quintus"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"traefik"}},"template":{"metadata":{"labels":{"app":"traefik"}},"spec":{"containers":[{"args":["--providers.kubernetescrd","--providers.kubernetesingress","--entrypoints.web.address=:80","--entrypoints.websecure.address=:443","--api.insecure=true","--api.dashboard=true","--log.level=INFO","--accesslog=true"],"image":"traefik: [...]
  creationTimestamp: "2026-04-17T06:18:45Z"
  generation: 6
  name: traefik
  namespace: quintus
  resourceVersion: "7483"
  uid: 5b2d17e1-516f-42bd-8a89-28b1368ac8cf
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: traefik
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-04-17T07:06:59Z"
      labels:
        app: traefik
    spec:
      containers:
      - args:
        - --providers.kubernetescrd
        - --providers.kubernetesingress
        - --entrypoints.web.address=:80
        - --entrypoints.websecure.address=:443
        - --api.insecure=true
        - --api.dashboard=true
        - --log.level=INFO
        - --accesslog=true
        image: traefik:v3.6.13
        imagePullPolicy: IfNotPresent
        name: traefik
        ports:
        - containerPort: 80
          name: web
          protocol: TCP
        - containerPort: 443
          name: websecure
          protocol: TCP
        - containerPort: 8080
          name: admin
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: traefik
      serviceAccountName: traefik
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-04-17T06:18:52Z"
    lastUpdateTime: "2026-04-17T06:18:52Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-04-17T06:18:45Z"
    lastUpdateTime: "2026-04-17T07:07:01Z"
    message: ReplicaSet "traefik-66f8477467" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 6
  readyReplicas: 1
  replicas: 1
  terminatingReplicas: 0
  updatedReplicas: 1
