deployment/k8s/50-queryexplorer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queryexplorer
  namespace: quintus
spec:
  replicas: 1
  selector:
    matchLabels: {app: queryexplorer}
  template:
    metadata:
      labels: {app: queryexplorer}
    spec:
      containers:
        - name: queryexplorer
          image: queryexplorer:dev1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet: {path: /healthz, port: 8080}
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: queryexplorer
  namespace: quintus
spec:
  selector: {app: queryexplorer}
  ports:
    - port: 80
      targetPort: 8080
